<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.shell</groupId>
	<artifactId>spring-shell</artifactId>
	<name>Spring Shell</name>
	<description>Parent POM for Spring Shell</description>
	<version>4.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<url>https://github.com/spring-projects/spring-shell</url>
	<organization>
		<name>Spring</name>
		<url>https://spring.io</url>
	</organization>
	<developers>
		<developer>
			<id>Spring</id>
			<name>Spring</name>
			<url>https://spring.io</url>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/spring-projects/spring-shell</url>
		<connection>scm:git:git://github.com/spring-projects/spring-shell.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/spring-projects/spring-shell.git</developerConnection>
	</scm>
	<issueManagement>
		<system>Github Issues</system>
		<url>https://github.com/spring-projects/spring-shell/issues</url>
	</issueManagement>
	<ciManagement>
		<system>Github Actions</system>
		<url>https://github.com/spring-projects/spring-shell/actions</url>
	</ciManagement>
	<licenses>
		<license>
			<name>Apache 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<!-- common properties -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<include-ffm>false</include-ffm> <!-- TODO ? -->

		<!-- production dependencies -->
		<reactor.version>3.8.0-SNAPSHOT</reactor.version>
		<spring-framework.version>7.0.0-SNAPSHOT</spring-framework.version>
		<spring-boot.version>4.0.0-SNAPSHOT</spring-boot.version>
		<jline.version>3.30.6</jline.version>
		<antlr-st4.version>4.3.4</antlr-st4.version>
		<commons-io.version>2.20.0</commons-io.version>
		<slf4j.version>2.0.17</slf4j.version>
		<jakarta.validation-api.version>3.1.1</jakarta.validation-api.version>

		<!-- test dependencies -->
		<jimfs.version>1.3.1</jimfs.version>
		<assertj.version>3.27.4</assertj.version>
		<junit-jupiter.version>6.0.0</junit-jupiter.version>
		<mockito.version>5.19.0</mockito.version>
		<awaitility.version>4.3.0</awaitility.version>
		<hibernate-validator.version>9.0.1.Final</hibernate-validator.version>
		<jakarta.el.version>4.0.2</jakarta.el.version>

		<!-- documentation dependencies -->
		<antora-maven-plugin.version>1.0.0-alpha.5</antora-maven-plugin.version>

		<!-- plugin versions -->
		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
		<maven-javadoc-plugin.version>3.11.3</maven-javadoc-plugin.version>
		<maven-source-plugin.version>3.3.1</maven-source-plugin.version>
		<flatten-maven-plugin.version>1.7.2</flatten-maven-plugin.version>
		<maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
		<maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
	</properties>

	<modules>
		<module>spring-shell-table</module>
		<module>spring-shell-tui</module>
		<module>spring-shell-core</module>
		<module>spring-shell-standard</module>
		<module>spring-shell-test</module>
		<module>spring-shell-autoconfigure</module>
		<module>spring-shell-test-autoconfigure</module>
		<module>spring-shell-docs</module>
		<module>spring-shell-dependencies</module>
		<module>spring-shell-samples</module>
		<module>spring-shell-starters</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>
						<compilerArg>-parameters</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>${surefireArgLine}</argLine>
					<excludes>
						<exclude>**/*IntegrationTests.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<configuration>
					<includes>
						<include>**/*IntegrationTests.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Implementation-Title>${project.artifactId}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<configuration>
					<excludePackageNames>
						org.springframework.shell.samples.*
					</excludePackageNames>
					<detectJavaApiLink>false</detectJavaApiLink>
					<doclint>all,-missing</doclint>
					<quiet>true</quiet>
				</configuration>
				<executions>
					<execution>
						<id>generate-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<sourcepath>src/main/java</sourcepath>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>generate-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${flatten-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
						<configuration>
							<updatePomFile>true</updatePomFile>
							<flattenMode>ossrh</flattenMode>
							<pomElements>
								<distributionManagement>remove</distributionManagement>
								<dependencyManagement>resolve</dependencyManagement>
								<repositories>remove</repositories>
								<scm>keep</scm>
								<url>keep</url>
								<organization>resolve</organization>
							</pomElements>
						</configuration>
					</execution>
					<execution>
						<id>clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven-deploy-plugin.version}</version>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>maven-central</id>
			<url>https://repo.maven.apache.org/maven2/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>
</project>
